fix misaligned phone-preview when image size is different

--- a/src/assets/cmps/phone/phone-list.css
+++ b/src/assets/cmps/phone/phone-list.css
@@ -11,7 +11,7 @@
 
   & .phone-list {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(10vw, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(225px, 1fr));
     gap: var(--spacing-xl);
 
     padding: var(--spacing-xl);
