--- a/src/assets/cmps/phone/phone-preview.css
+++ b/src/assets/cmps/phone/phone-preview.css
@@ -1,11 +1,11 @@
 .phone-preview {
+  height: 360px;
+  aspect-ratio: 5/8;
+  padding: var(--spacing-md);
+
   display: flex;
   flex-direction: column;
   gap: 0.5em;
-
-  min-height: 250px;
-
-  padding: var(--spacing-md);
 
   border: 1px solid rgba(0, 0, 0, 0.25);
   border-radius: 4px;
@@ -18,6 +18,13 @@
   }
 
   transition: all 50ms ease-in;
+
+  & img {
+    width: 100%;
+    max-height: 240px;
+    object-fit: contain;
+    border-radius: 4px;
+  }
 
   & .preview-details {
     align-items: center;
